tests/rustdoc-ui/invalid_infered_static_and_const.stderr
error[E0121]: the placeholder `_` is not allowed within types on item signatures for constants
  --> $DIR/invalid_infered_static_and_const.rs:1:24
   |
LL | const FOO: dyn Fn() -> _ = "";
   |                        ^ not allowed in type signatures

error[E0121]: the placeholder `_` is not allowed within types on item signatures for statics
  --> $DIR/invalid_infered_static_and_const.rs:2:25
   |
LL | static BOO: dyn Fn() -> _ = "";
   |                         ^ not allowed in type signatures

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0121`.
