tests/rustdoc-ui/invalid_infered_static_and_const.rs
const FOO: dyn Fn() -> _ = ""; //~ ERROR E0121
static BOO: dyn Fn() -> _ = ""; //~ ERROR E0121
